# RK4_openMP

files_ex/: input.txt  input_100.txt  input_large.txt  output.txt  output_large.txt
scripts/: config.sh
src/: CMakeLists.txt  rk4_launcher.cpp
src/IO/: rk4_Array.cpp  rk4_Array.hpp  rk4_FIFO.cpp  rk4_FIFO.hpp  rk4_IO.cpp  rk4_IO.hpp  rk4_data.cpp  rk4_data.hpp
src/rk4_lib/: rk4.cpp  rk4.hpp  rk4_API.cpp  rk4_API.hpp
